--- a/Readme
+++ b/Readme
@@ -25,6 +25,12 @@ echo 'cm9vdA==' | base64 --decode
 echo 'ZGFyc2hANDMyMQ==' | base64 --decode
 
 # to build mysql student database image 
-docker build --build-arg MYSQL_ROOT_PASSWORD=$(kubectl get secret db-secret -o=jsonpath='{.data.password}' | base64 --decode) \
-             --build-arg MYSQL_DATABASE=$(kubectl get secret db-secret -o=jsonpath='{.data.username}' | base64 --decode) \
-             -t studentdb .
+
+docker buildx build --platform linux/amd64 -t your-mysql-image:latest --build-arg MYSQL_ROOT_PASSWORD=rootpassword --build-arg MYSQL_DATABASE=studentapp .
+
+docker buildx build --platform linux/amd64 -t studentdb:latest --build-arg MYSQL_ROOT_PASSWORD=$(kubectl get secret db-secret -o=jsonpath='{.data.password}' | base64 --decode) --build-arg MYSQL_DATABASE=$(kubectl get secret db-secret -o=jsonpath='{.data.username}' | base64 --decode) --load .
+
+docker run -d --name test-mysql-container -e MYSQL_ROOT_PASSWORD=rootpassword -e MYSQL_DATABASE=studentapp studentdb:latest
+
+docker run -d --name test-mysql-container -e MYSQL_ROOT_PASSWORD=$(kubectl get secret db-secret -o=jsonpath='{.data.password}' | base64 --decode) -e MYSQL_DATABASE=$(kubectl get secret db-secret -o=jsonpath='{.data.username}' | base64 --decode) studentdb:latest
+
